# bumblebee-feature-flag-service

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: feature_flag_service.py  feature_flags_cli.py
tests/: test_feature_flag_service.py  test_feature_flags_cli.py
